# dovwms

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: deploy.yaml  docs.yml  main.yml  publish-to-pypi.yaml  release.yml  test.yml  tests.yaml
.github/workflows/_old/: publish-to-pypi.yaml
0.0.6/: 404.html  contributing.html  index.html  modules.html  objects.inv  sitemap.xml
0.0.6/search/: search_index.json
docs/: contributing.md  index.md  modules.md
dovwms/: __init__.py  base.py  dov.py  geopunt.py
tests/: conftest.py  test_dov.py  test_geopunt.py
