[project]
name = "dovwms"
version = "0.0.1"
description = "Simple client for DOV WMS services."
authors = [{name = "Mateusz Zawadzki", email = "zawadzkimat@outlook.com"}]
repository = "https://github.com/zawadzkim/dovwms"
documentation = "https://zawadzkim.github.io/dovwms/"
readme = "README.md"
packages = [
  {include = "dovwms"}
]

requires-python = ">=3.11,<4.0"
dependencies = [
    "owslib>=0.34.1",
    "shapely>=2.1.2",
    "pre-commit (>=4.3.0,<5.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "deptry>=0.16.2",
    "mypy>=1.5.1",
    "pre-commit>=3.4.0",
    "tox>=4.11.1",
    "types-shapely (>=2.1.0.20250917,<3.0.0.0)",
]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.2.7",
    "mkdocs-include-markdown-plugin>=7.2.0",
    "mkdocstrings-python>=1.18.2",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["dovwms"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.deptry.per_rule_ignores]
DEP002 = [
    "pytest",
    "deptry",
    "mypy",
    "pre-commit",
    "tox",
    "types-shapely",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings-python"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: mark test as an integration test (requires network / slow)",
]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true



[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

